fix(PP-54): atender review ariela - unificar ProvinciaCR, ElementCollection, validar rol, Catalogos.desde()