@@ -4,13 +4,13 @@ import com.piedpiper.carbonhub.auditor.models.dtos.AuditorResumenResponseDTO;
 import com.piedpiper.carbonhub.auditor.models.dtos.PerfilAuditorResponseDTO;
 import com.piedpiper.carbonhub.auditor.models.entities.PerfilAuditor;
 import com.piedpiper.carbonhub.auditor.models.enums.EspecialidadAuditor;
+import com.piedpiper.carbonhub.auditor.models.enums.ProvinciaCR;
 import com.piedpiper.carbonhub.user.models.entities.Usuario;
 
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -24,7 +24,7 @@ public interface PerfilAuditorMapper {
 
     @Mapping(target = "auditorId", source = "auditor.id")
     @Mapping(target = "especialidades", source = "especialidades", qualifiedByName = "especialidadesAList")
-    @Mapping(target = "zonasCobertura", source = "zonasCobertura", qualifiedByName = "csvToList")
+    @Mapping(target = "zonasCobertura", source = "zonasCobertura", qualifiedByName = "zonasAList")
     PerfilAuditorResponseDTO aResponseDto(PerfilAuditor perfil);
 
     @Mapping(target = "auditorId", source = "auditor.id")
@@ -32,22 +32,15 @@ public interface PerfilAuditorMapper {
     @Mapping(target = "especialidadesPrincipales", source = "especialidades", qualifiedByName = "principales")
     AuditorResumenResponseDTO aResumen(PerfilAuditor perfil);
 
-    @Named("csvToList")
-    default List<String> csvToList(String csv) {
-        if (csv == null || csv.isBlank()) {
+    @Named("zonasAList")
+    default List<String> zonasAList(Set<ProvinciaCR> zonas) {
+        if (zonas == null || zonas.isEmpty()) {
             return Collections.emptyList();
         }
-        return Arrays.stream(csv.split(","))
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
-    }
-
-    default String listToCsv(List<String> list) {
-        if (list == null || list.isEmpty()) {
-            return "";
-        }
-        return String.join(",", list);
+        return zonas.stream()
+                .sorted()
+                .map(Enum::name)
+                .toList();
     }
 
     @Named("especialidadesAList")
